--- a/preface/listings-stata.tex
+++ b/preface/listings-stata.tex
@@ -11,8 +11,8 @@
     % 函数关键字
     morekeywords=[2]{bofd,Cdhms,Chms,Clock,clock,Cmdyhms,Cofc,cofC,Cofd,cofd,daily,date,day,dhms,dofb,dofC,dofc,dofh,dofm,dofq,dofw,dofy,dow,doy,halfyear,halfyearly,hh,hhC,hms,hofd,hours,mdy,mdyhms,minutes,mm,mmC,mofd,month,monthly,msofhours,msofminutes,msofseconds,qofd,quarter,quarterly,seconds,ss,ssC,tC,tc,td,th,tm,tq,tw,week,weekly,wofd,year,yearly,yh,ym,yofd,yq,yw,abs,ceil,cloglog,comb,digamma,exp,expm1,floor,int,invcloglog,invlogit,ln,ln1m,ln,ln1p,ln,lnfactorial,lngamma,log,log10,log1m,log1p,max,min,mod,reldif,round,sign,sqrt,trigamma,trunc,cholesky,coleqnumb,colnfreeparms,colnumb,colsof,det,diag,diag0cnt,el,get,hadamard,I,inv,invsym,issymmetric,J,matmissing,matuniform,mreldif,nullmat,roweqnumb,rownfreeparms,rownumb,rowsof,sweep,trace,vec,vecdiag,autocode,byteorder,c,_caller,chop,abs,clip,cond,e,fileexists,fileread,filereaderror,filewrite,float,fmtwidth,has_eprop,inlist,inrange,irecode,maxbyte,maxdouble,maxfloat,maxint,maxlong,mi,minbyte,mindouble,minfloat,minint,minlong,missing,r,recode,replay,return,s,scalar,smallestdouble,rbeta,rbinomial,rcauchy,rchi2,rexponential,rgamma,rhypergeometric,rigaussian,rlaplace,rlogistic,rnbinomial,rnormal,rpoisson,rt,runiform,runiformint,rweibull,rweibullph,tin,twithin,betaden,binomial,binomialp,binomialtail,binormal,cauchy,cauchyden,cauchytail,chi2,chi2den,chi2tail,dgammapda,dgammapdada,dgammapdadx,dgammapdx,dgammapdxdx,dunnettprob,exponential,exponentialden,exponentialtail,F,Fden,Ftail,gammaden,gammap,gammaptail,hypergeometric,hypergeometricp,ibeta,ibetatail,igaussian,igaussianden,igaussiantail,invbinomial,invbinomialtail,invcauchy,invcauchytail,invchi2,invchi2tail,invdunnettprob,invexponential,invexponentialtail,invF,invFtail,invgammap,invgammaptail,invibeta,invibetatail,invigaussian,invigaussiantail,invlaplace,invlaplacetail,invlogistic,invlogistictail,invnbinomial,invnbinomialtail,invnchi2,invnF,invnFtail,invnibeta,invnormal,invnt,invnttail,invpoisson,invpoissontail,invt,invttail,invtukeyprob,invweibull,invweibullph,invweibullphtail,invweibulltail,laplace,laplaceden,laplacetail,lncauchyden,lnigammaden,lnigaussianden,lniwishartden,lnlaplaceden,lnmvnormalden,lnnormal,lnnormalden,lnwishartden,logistic,logisticden,logistictail,nbetaden,nbinomial,nbinomialp,nbinomialtail,nchi2,nchi2den,nchi2tail,nF,nFden,nFtail,nibeta,normal,normalden,npnchi2,npnF,npnt,nt,ntden,nttail,poisson,poissonp,poissontail,t,tden,ttail,tukeyprob,weibull,weibullden,weibullph,weibullphden,weibullphtail,weibulltail,abbrev,char,collatorlocale,collatorversion,indexnot,plural,plural,real,regexm,regexr,regexs,soundex,soundex_nara,strcat,strdup,string,strofreal,string,strofreal,stritrim,strlen,strlower,strltrim,strmatch,strofreal,strofreal,strpos,strproper,strreverse,strrpos,strrtrim,strtoname,strtrim,strupper,subinstr,subinword,substr,tobytes,uchar,udstrlen,udsubstr,uisdigit,uisletter,ustrcompare,ustrcompareex,ustrfix,ustrfrom,ustrinvalidcnt,ustrleft,ustrlen,ustrlower,ustrltrim,ustrnormalize,ustrpos,ustrregexm,ustrregexra,ustrregexrf,ustrregexs,ustrreverse,ustrright,ustrrpos,ustrrtrim,ustrsortkey,ustrsortkeyex,ustrtitle,ustrto,ustrtohex,ustrtoname,ustrtrim,ustrunescape,ustrupper,ustrword,ustrwordcount,usubinstr,usubstr,word,wordbreaklocale,worcount,acos,acosh,asin,asinh,atan,atanh,cos,cosh,sin,sinh,tan,tanh,},
     % 注释
-    morecomment=[l]{//},
-    morecomment=[s]{/*}{*/},
+    morecomment=[l][\itshape\color{gray}]{//},
+    morecomment=[s][\color{gray}]{/*}{*/},
     morecomment=[f][\itshape\color{gray}][0]{*}, %当*在首列时，为注释
     morecomment=[f][\itshape\color{gray}][1]{*}, %当*在第二列时，为注释
     morecomment=[f][\itshape\color{gray}][2]{*}, %当*在第三列时，为注释
