--- a/preface/preface.tex
+++ b/preface/preface.tex
@@ -1,6 +1,7 @@
 %preface for the main.tex
 \usepackage[a4paper]{geometry} %设置纸张为A4大小
 \usepackage{amsmath} %最常用的数学宏包
+\allowdisplaybreaks %允许多行公式换页
 \usepackage{amssymb} %提供了额外的数学字体和数学符号
 \usepackage{mathtools} %提供了额外的数学工具，如dcases环境
 \usepackage{lipsum} %英语假文宏包
