--- a/main.tex
+++ b/main.tex
@@ -8,7 +8,7 @@
 	Problem sets for Advanced Econometrics III
 }
 \author{Meiting Wang\thanks{Meiting Wang, Email: wangmeiting92@gmail.com}}
-\date{\today}
+\date{April 26, 2021}
 
 
 
@@ -23,6 +23,12 @@
 
 \clearpage
 \pagenumbering{arabic}
+\section*{Prerequisite knowledge}
+\addcontentsline{toc}{section}{Prerequisite knowledge}
+\input{Prerequisite/Prerequisite}
+
+
+\clearpage
 \section*{Chapter 5}
 \addcontentsline{toc}{section}{Chapter 5}
 \input{chapter5/chapter5.tex}
@@ -39,46 +45,17 @@
 \addcontentsline{toc}{section}{Chapter 10}
 \input{chapter10/chapter10}
 
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
+
+\clearpage
+\section*{Chapter 11}
+\addcontentsline{toc}{section}{Chapter 11}
+\input{chapter11/chapter11}
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+\clearpage
+\section*{Chapter 21}
+\addcontentsline{toc}{section}{Chapter 21}
+\input{chapter21/chapter21}
 
 
 
